--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ jspm_packages/
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
+# ssl/tsl certificate
+certs
+
 # TypeScript cache
 *.tsbuildinfo
 
