--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["mispelling"]
+  "cSpell.words": ["mispelling"],
+  "eslint.workingDirectories": ["./tools/eslint/eslint-project"]
 }
